[tool.poetry]
name = "hystorian"
version = "2.0.0"
description = "a generic materials science data analysis Python package built with processing traceability, reproducibility, and archival ability at its core."
authors = ["Loic Musy <loic.musy@unige.ch>", "Ralph Bulanadi <ralph.bulanadi@unige.ch>"]
license = "Creative Commons Attribution 4.0 International"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
h5py = "^3.12.0"
numpy = "^2.2.1"
pillow = "^11.1.0"
igor2 = "^0.5.9"
scikit-image = "^0.25.0"
chardet = "^5.2.0"
pywin32 = "^308"
pyzmq = "^26.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
line-profiler = "^4.2.0"
matplotlib = "^3.9.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
isort = "^5.13.2"
sphinx = "^8.1"
sphinx-rtd-theme = "^3.0.2"
# sphinxcontrib-napoleon = "^0.7"
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"