[project]
name = "hystorian"
version = "2.0.0"
description = "a generic materials science data analysis Python package built with processing traceability, reproducibility, and archival ability at its core."
authors = [
    { name = "Loic Musy", email = "loic.musy@unige.ch" },
    { name = "Ralph Bulanadi", email = "ralph.bulanadi@unige.ch" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "h5py>=3.12.0,<4",
    "numpy>=2.2.1,<3",
    "pillow>=11.1.0,<12",
    "igor2>=0.5.9,<0.6",
    "scikit-image>=0.25.0,<0.26",
    "chardet>=5.2.0,<6",
    "pyzmq>=26.2.0,<27",
]

[dependency-groups]
dev = [
    "black>=24.8.0,<25",
    "line-profiler>=4.2.0,<5",
    "matplotlib>=3.9.0,<4",
    "pytest>=8.3.4,<9",
    "pytest-cov>=6.0.0,<7",
    "isort>=5.13.2,<6",
    "sphinx~=8.1",
    "sphinx-rtd-theme>=3.0.2,<4",
    "ipykernel>=6.23.0,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.format]
max-line-length = 120
